tests/ui/cmse-nonsecure/cmse-nonsecure-call/return-via-stack.stderr
error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:41:48
   |
LL |     u128: extern "cmse-nonsecure-call" fn() -> u128,
   |                                                ^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:42:48
   |
LL |     i128: extern "cmse-nonsecure-call" fn() -> i128,
   |                                                ^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:30:46
   |
LL |     f1: extern "cmse-nonsecure-call" fn() -> ReprCU64,
   |                                              ^^^^^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:31:46
   |
LL |     f2: extern "cmse-nonsecure-call" fn() -> ReprRustU64,
   |                                              ^^^^^^^^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:32:46
   |
LL |     f3: extern "cmse-nonsecure-call" fn() -> ReprCBytes,
   |                                              ^^^^^^^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:33:46
   |
LL |     f4: extern "cmse-nonsecure-call" fn() -> U64Compound,
   |                                              ^^^^^^^^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:34:46
   |
LL |     f5: extern "cmse-nonsecure-call" fn() -> ReprCAlign16,
   |                                              ^^^^^^^^^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:35:46
   |
LL |     f6: extern "cmse-nonsecure-call" fn() -> [u8; 5],
   |                                              ^^^^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:57:46
   |
LL |     f1: extern "cmse-nonsecure-call" fn() -> ReprRustUnionU64,
   |                                              ^^^^^^^^^^^^^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error[E0798]: return value of `"cmse-nonsecure-call"` function too large to pass via registers
  --> $DIR/return-via-stack.rs:58:46
   |
LL |     f2: extern "cmse-nonsecure-call" fn() -> ReprCUnionU64,
   |                                              ^^^^^^^^^^^^^ this type doesn't fit in the available registers
   |
   = note: functions with the `"cmse-nonsecure-call"` ABI must pass their result via the available return registers
   = note: the result must either be a (transparently wrapped) i64, u64 or f64, or be at most 4 bytes in size

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0798`.
